# agriculture-IoT-pipeline

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  NEXT_STEPS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: architecture.md
ingestion/: raw_to_bronze.py
logs/: agriculture_iot.jsonl
tests/: test_date_extraction.py  test_ingestion_logic.py  test_silver_transformation.py
transformation/: bronze_to_silver.py
utils/: config.py  logger.py  profile_data.py  s3_client.py
